Bring the rest of the profiler up to eslint compliance.

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
   rules: {
     "no-console": 0,
     "arrow-body-style": 0,
-    "prefer-rest-params": 0
+    "prefer-rest-params": 0,
+    "no-use-before-define": 0,
   }
 }
