--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A profiler designed for use in the game of Screeps.",
   "main": "screeps-profiler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint",
     "lint": "eslint ."
   },
   "repository": {
