--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   },
   "homepage": "https://github.com/gdborton/screeps-profiler#readme",
   "jest": {
-    "coverageReporters": ["html", "lcov"]
+    "coverageReporters": [
+      "html",
+      "lcov"
+    ]
   },
   "devDependencies": {
+    "coveralls": "^2.13.1",
     "eslint": "^2.2.0",
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
