Fix CostMatrix registering issues and add more objects - preserve function properties - wrap static functions - skip non-writable value properties - fix constructor wrapping - register all game objects by default

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,16 +2,9 @@
   "extends": "airbnb",
   "globals": {
     "Game": true,
-    "Creep": true,
-    "Room": true,
-    "RoomPosition": true,
-    "Source": true,
-    "Spawn": true,
-    "Structure": true,
-    "Flag": true,
     "Memory": true,
   },
-  rules: {
+  "rules": {
     "no-console": 0,
     "arrow-body-style": 0,
     "prefer-rest-params": 0,
