Add all the consts

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,56 @@
 {
   "extends": "airbnb",
   "globals": {
+    "ConstructionSite": true,
+    "Creep": true,
+    "Deposit": true,
+    "Flag": true,
     "Game": true,
+    "InterShardMemory": true,
     "Memory": true,
+    "Mineral": true,
+    "Nuke": true,
+    "OwnedStructure": true,
+    "PathFinder": true,
+    "PowerCreep": true,
+    "RawMemory": true,
+    "Resource": true,
+    "Room": true,
+    "RoomObject": true,
+    "RoomPosition": true,
+    "RoomVisual": true,
+    "Ruin": true,
+    "Source": true,
+    "Store": true,
+    "Structure": true,
+    "StructureContainer": true,
+    "StructureController": true,
+    "StructureExtension": true,
+    "StructureExtractor": true,
+    "StructureFactory": true,
+    "StructureInvaderCore": true,
+    "StructureKeeperLair": true,
+    "StructureLab": true,
+    "StructureLink": true,
+    "StructureNuker": true,
+    "StructureObserver": true,
+    "StructurePortal": true,
+    "StructurePowerBank": true,
+    "StructurePowerSpawn": true,
+    "StructureRampart": true,
+    "StructureRoad": true,
+    "StructureSpawn": true,
+    "StructureStorage": true,
+    "StructureTerminal": true,
+    "StructureTower": true,
+    "StructureWall": true,
+    "Tombstone": true
   },
   "rules": {
     "no-console": 0,
     "arrow-body-style": 0,
     "prefer-rest-params": 0,
     "no-use-before-define": 0,
-    "strict": 0,
+    "strict": 0
   }
 }
